--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,9 @@
+/* General App styles */
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-header {
-  position: relative;
-  z-index: 10;
-}
-
+/* Body styles (general) */
 body {
   transition: background-color 0.4s ease, color 0.4s ease;
 }
@@ -33,6 +15,7 @@ body {
   cursor: pointer;
 }
 
+/* Background dots pattern for light mode */
 .bg-dots-pattern {
   background-image: radial-gradient(
       circle at 10% 20%,
@@ -51,6 +34,7 @@ body.dark {
   font-family: "Montserrat", sans-serif;
 }
 
+/* Background dots pattern for dark mode */
 .dark .bg-dots-pattern {
   background-image: radial-gradient(
       circle at 10% 20%,
@@ -66,16 +50,13 @@ body.dark {
   background-repeat: repeat;
 }
 
-/* Skill hover effect */
-.skill:hover {
-  transform: scale(1.05);
-}
-
+/* Unstyled list item styles */
 .unstyled li a.active {
   font-weight: bold;
   color: rgb(59, 130, 246);
 }
 
+/* Number styling within unstyled list items */
 .unstyled li a span.num {
   background-color: #e2e8f0;
   color: #4a5568;
@@ -84,6 +65,13 @@ body.dark {
   padding: 0.25rem 0.5rem;
 }
 
+/* Hover effect for links in unstyled lists */
+.unstyled li a:hover {
+  transition: color 0.3s ease;
+  color: rgb(59, 130, 246);
+}
+
+/* Skill item layout */
 .skill-item {
   margin: 2rem;
   display: flex;
@@ -91,15 +79,18 @@ body.dark {
   align-items: center;
 }
 
+/* Skills cloud layout */
 .skills-cloud {
   gap: 2rem;
 }
 
+/* Unstyled list layout */
 .unstyled {
   display: flex;
   flex-wrap: wrap;
 }
 
+/* Dark mode switch thumb styles */
 .dark-mode-switch-thumb {
   display: flex;
   align-items: center;
@@ -113,6 +104,7 @@ body.dark {
   transform: translate(-50%, -50%);
 }
 
+/* Media query for smaller screens */
 @media (max-width: 768px) {
   .unstyled {
     padding-top: 1rem;
@@ -129,19 +121,5 @@ body.dark {
 @media (max-width: 768px) {
   .flex.items-center {
     justify-content: flex-end;
-  }
-}
-
-.unstyled li a:hover {
-  transition: color 0.3s ease;
-  color: rgb(59, 130, 246);
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
   }
 }
